a lot of changes in the article

--- a/Papers/ICCC-2023/bibliography.bib
+++ b/Papers/ICCC-2023/bibliography.bib
@@ -693,9 +693,10 @@
                toselected exercises, is available at http://www.diku.dk/~torbenm/ICD}
 }
 
-@bathesis{grabski2020,
+@thesis{grabski2020,
   author = {Grabski, Adam},
   title  = {Rose Parser Generator},
   school = {Wydział Elektroniki i Technik Informacyjnych, Politechnika Warszawska},
-  year   = {2020}
+  year   = {2020},
+  type   = {Bachelor's Thesis}
 }
