--- a/Papers/ICCC-2023/c-=-1.tex
+++ b/Papers/ICCC-2023/c-=-1.tex
@@ -71,15 +71,15 @@
 
 %% Title information
 \title[Short Title]{Compilation through interpretation}         %% [Short Title] is optional;
-                                        %% when present, will be used in
-                                        %% header instead of Full Title.
+%% when present, will be used in
+%% header instead of Full Title.
 %\titlenote{with title note}             %% \titlenote is optional;
-                                        %% can be repeated if necessary;
-                                        %% contents suppressed with 'anonymous'
-\subtitle{CTFE First approach to compiler construction}                     %% \subtitle is optional
+%% can be repeated if necessary;
+%% contents suppressed with 'anonymous'
+\subtitle{CTFEF approach to compiler construction}                     %% \subtitle is optional
 %\subtitlenote{with subtitle note}       %% \subtitlenote is optional;
-                                        %% can be repeated if necessary;
-                                        %% contents suppressed with 'anonymous'
+%% can be repeated if necessary;
+%% contents suppressed with 'anonymous'
 
 
 %% Author information
@@ -95,16 +95,16 @@
 %% Author with single affiliation.
 \author{Adam Grabski}
 %\authornote{with author1 note}          %% \authornote is optional;
-                                        %% can be repeated if necessary
+%% can be repeated if necessary
 \orcid{nnnn-nnnn-nnnn-nnnn}             %% \orcid is optional
 \affiliation{
-  \department{Department of Electronics and Information Technology}              %% \department is recommended
-  \institution{Warsaw University of Technology}            %% \institution is required
-  \streetaddress{Nowowiejska 15/19}
-  \city{Warsaw}
-  \state{Mazowieckie}
-  \postcode{00-665}
-  \country{Poland}                    %% \country is recommended
+	\department{Department of Electronics and Information Technology}              %% \department is recommended
+	\institution{Warsaw University of Technology}            %% \institution is required
+	\streetaddress{Nowowiejska 15/19}
+	\city{Warsaw}
+	\state{Mazowieckie}
+	\postcode{00-665}
+	\country{Poland}                    %% \country is recommended
 }
 \email{adam.grabski@stud.pw.edu.pl}          %% \email is recommended
 
@@ -112,13 +112,13 @@
 \author{Ilona Bluemke}
 \orcid{nnnn-nnnn-nnnn-nnnn}             %% \orcid is optional
 \affiliation{
-  \department{Department of Electronics and Information Technology}              %% \department is recommended
-  \institution{Warsaw University of Technology}            %% \institution is required
-  \streetaddress{Nowowiejska 15/19}
-  \city{Warsaw}
-  \state{Mazowieckie}
-  \postcode{00-665}
-  \country{Poland}                    %% \country is recommended
+	\department{Department of Electronics and Information Technology}              %% \department is recommended
+	\institution{Warsaw University of Technology}            %% \institution is required
+	\streetaddress{Nowowiejska 15/19}
+	\city{Warsaw}
+	\state{Mazowieckie}
+	\postcode{00-665}
+	\country{Poland}                    %% \country is recommended
 }
 \email{Ilona.Bluemke@pw.edu.pl}          %% \email is recommended
 
@@ -126,25 +126,25 @@
 %% Note: \begin{abstract}...\end{abstract} environment must come
 %% before \maketitle command
 \begin{abstract}
-\input{sections/abstract.tex}
+	\input{sections/abstract.tex}
 \end{abstract}
 
 
 %% 2012 ACM Computing Classification System (CSS) concepts
 %% Generate at 'http://dl.acm.org/ccs/ccs.cfm'.
 \begin{CCSXML}
-<ccs2012>
-<concept>
-<concept_id>10011007.10011006.10011008</concept_id>
-<concept_desc>Software and its engineering~General programming languages</concept_desc>
-<concept_significance>500</concept_significance>
-</concept>
-<concept>
-<concept_id>10003456.10003457.10003521.10003525</concept_id>
-<concept_desc>Social and professional topics~History of programming languages</concept_desc>
-<concept_significance>300</concept_significance>
-</concept>
-</ccs2012>
+	<ccs2012>
+	<concept>
+	<concept_id>10011007.10011006.10011008</concept_id>
+	<concept_desc>Software and its engineering~General programming languages</concept_desc>
+	<concept_significance>500</concept_significance>
+	</concept>
+	<concept>
+	<concept_id>10003456.10003457.10003521.10003525</concept_id>
+	<concept_desc>Social and professional topics~History of programming languages</concept_desc>
+	<concept_significance>300</concept_significance>
+	</concept>
+	</ccs2012>
 \end{CCSXML}
 
 \ccsdesc[500]{Software and its engineering~General programming languages}
