--- a/Papers/ICCC-2023/sections/realted-work.tex
+++ b/Papers/ICCC-2023/sections/realted-work.tex
@@ -3,7 +3,7 @@
 
 Many currently used programming languages allow the programmer to execute some code at compile time, including C\# \cite{csharp:source_generators,roslyn}, Rust \cite{rust, klabnik2019rust} and C++ \cite{ISO:cpp20}.
 
-Rust language compiler is the most similar in capability, to what was demonstrated with C-=-1, as a feature of CTFE First.
+Rust language compiler is the most similar in capability, to what was demonstrated with C-=-1, as a feature of CTFEF.
 It allows the user to write code that performs some transformations of the program, and interact with the envoirment during the build process.
 The two relevant features are build scripts and macros.
 
