--- a/Papers/ICCC-2023/bibliography.bib
+++ b/Papers/ICCC-2023/bibliography.bib
@@ -693,10 +693,10 @@
                toselected exercises, is available at http://www.diku.dk/~torbenm/ICD}
 }
 
-@thesis{grabski2020,
+@phdthesis{grabski2020,
   author = {Grabski, Adam},
   title  = {Rose Parser Generator},
   school = {Wydział Elektroniki i Technik Informacyjnych, Politechnika Warszawska},
   year   = {2020},
-  type   = {Bachelor's Thesis}
+  type   = {Bachelor's thesis}
 }
