--- a/Papers/ICCC-2023/sections/implementation.tex
+++ b/Papers/ICCC-2023/sections/implementation.tex
@@ -12,17 +12,16 @@ The final part of a CTFEF compiler is the Backend Interface.
 It is a program, written in the target language, and ran at compile-time that translates the semantic model into the backends assembly language.
 Backend Interface implemented for C-=-1 is relativley small and is described in chapter \ref{implementation/backend-interface}.
 
+\begin{figure*}
+	\includegraphics[width=16cm]{pictures/interpreter_data_structures_uml.png}
+	\caption{Class diagram of C-=-1 interpreter data structures}
+	\label{fig:interpreter_data_structures}
+\end{figure*}
+
 \subsection{Interpreter data structures}
 \label{data_structures}
 Data structures of the C-=-1 Interpreter have been designed having the ease of development and debugging in mind.
 They are thus not particularly efficent.
-
-%todo: double column
-\begin{figure*}
-	\includegraphics[width=12cm]{pictures/interpreter_data_structures_uml.png}
-	\caption{Class diagram of C-=-1 interpreter data structures}
-	\label{fig:interpreter_data_structures}
-\end{figure*}
 
 Figure \ref{fig:interpreter_data_structures} contains a class diagram of most of the types used to represent values within C-=-1.
 All of them derive from \lstinline{IRuntimeValue} and are managed via C++ smart pointers.
@@ -91,6 +90,18 @@ The current implementation generates a function for each operator, regardless of
 They are merely a wrapper around the actual LLVM intrinsic, meant to simplify implementation of the Backend Interface.
 Future versions, with additional effort, may generate the ideal LLVMIR from line 21 of Listing \ref{impl:theoretical_llvmir}.
 
+Certain other intrinsic operations are defined using external dependencies.
+C-=-1 memory managment library, in the runtime context, uses a simple interface capable of allocating and deleting a continous buffer.
+It is comprised of two functions: \lstinline{unsafe_new} and \lstinline{delete}.
+In the standard library, they are explicitly mapped to \lstinline{malloc} and \lstinline{free} functions from the C runtime.
+
+Backend interface must also allow the programmer to influence how the executable code is generated.
+There are many practical reasons for this capability.
+Specifying the name of a function, in order to link it to an external symbol is one of them.
+For example, C-=-1 standard library uses \lstinline{malloc} and \lstinline{free} to manage memory.
+These symbols are imported as \lstinline{unsafe_new} and \lstinline{delete} in excerpt in Listing \ref{lst:new}.
+This is accomplished using the \lstinline{mapToExternalSymbol} attribute and specifying the symbol name as a parameter, as was done in lines zero and three.
+
 \begin{minipage}{\linewidth}
 	\begin{lstlisting}[
 	tabsize=2,
@@ -128,8 +139,71 @@ define i32 @average(i32 %0, i32 %1, i32 %2){
 \end{lstlisting}
 \end{minipage}
 
-Certain other intrinsic operations are defined using external dependencies.
-C-=-1 memory managment library, in the runtime context, uses a simple interface capable of allocating and deleting a continous buffer.
-It is comprised of two functions: \lstinline{unsafe_new} and \lstinline{delete}.
-In the standard library, they are explicitly mapped to \lstinline{malloc} and \lstinline{free} functions from the C runtime.
+
+One of the possible ways of achieving this, is to declare an interface for an attribute generating a functions symbol name.
+Listing \ref{lst:selected_backend_interface} contains relevant code of a Backend Interface that uses such an attribute, to override mark external symbols.
+Interface \lstinline{ISymbolNameOverride} contains only one method: \lstinline{createSymbolName} that returns the name of the symbol in the generated assembly.
+
+Functions \lstinline{buildFunction} and \lstinline{getFunctionName}, from Listing \ref{lst:selected_backend_interface}, are parts of Backend Interface.
+They are invoked in order to convert a C-=-1 \lstinline{functionDescriptor} to a LLVMIR function.
+They were included in the Listing, because they are the only parts of the Backend Intreface that need to interact with \lstinline{ISymbolNameOverride} attributes.
+
+\begin{minipage}{\linewidth}
+
+	\begin{lstlisting}[
+	  numbers=left,
+	  firstnumber=0,
+	  caption={C-=-1 memory allocation functions from standard library},
+	  aboveskip=0pt,
+	  label={lst:new}
+	  ]
+[mapToExternalSymbol("malloc", "")]
+private fn unsafe_new(size: usize) -> char* {}
+
+[mapToExternalSymbol("free", "")]
+internal fn delete<typename T>(val: T*) {}
+
+  \end{lstlisting}
+\end{minipage}
+
+
+\begin{minipage}{\linewidth}
+
+	\begin{lstlisting}[
+	  numbers=left,
+	  firstnumber=0,
+	  caption={Part of a Backend Interface, using \lstinline{ISymbolNameOverride} interface},
+	  aboveskip=0pt,
+	  label={lst:selected_backend_interface}
+	  ]
+
+  private fn getFunctionName(f: functionDescriptor) -> string {
+	let attribute = f.get_attribute<ISymbolNameOverride>();
+	if(attribute != null<ISymbolNameOverride>())
+	  return attribute.createSymbolName();
+	return mangleName(f);
+  }
+
+  private fn buildFunction(
+	f: functionDescriptor,
+	llvmF: llvmFunction,
+	registry: packageRegistry*,
+	mod: llvmModule)
+  {
+	let variables = dictionary<variableDescriptor, llvmValue>();
+	let params = f.parameters();
+	for(i in enumerate(0, params.length()))
+	  variables.push(params[i], llvmF.getParameter(i));
+	let builder = llvmF.getBuilder();
+	let attribute = f.get_attribute<ISymbolNameOverride>();
+	if(attribute == null<ISymbolNameOverride>())
+	{
+	  let code = f.code();
+	  build_block(&code, &builder, &variables, registry);
+	}
+  }
+
+  \end{lstlisting}
+\end{minipage}
+
 
